--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Zhige Su
 # tagline: Here is personal website of Zhige Su. Powered by Jekyll, based on the Minimal Mistakes theme.
 # description: Two roads diverged in woods, I took the one less traveled by.
 #Comment out url when working locally to resolve base urls correctly
-url: https://suzhige.com
+url: https://caihanlin.com
 
 # Owner/author information
 owner:
