--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ url: https://maria-ggy.github.io/
 # Owner/author information
 owner:
   name: Zhige Su
-  avatar: szg.JPG
+  avatar: szg.jpg
   # bio: Two roads diverged in woods, I took the one less traveled by.
   email: hanlin.cai@ieee.org
   cv: https://caihanlin.com/file/CV-HanlinCAI.pdf
